# Semantic-Network-Triangle

./: index.html  package-lock.json  package.json  vite.config.js
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  template.html  triangle.rs
